# vega-scverse

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.public.mk  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AggregateOpsEnum/: index.html
AggregateTransform/: index.html
Axis/: index.html
AxisEnum/: index.html
AxisItem/: index.html
AxisRangeEnum/: index.html
BaseAxisScale/: index.html
BaseCategoricalColorScale/: index.html
BaseFormat/: index.html
BaseLineEnum/: index.html
BaseLineObject/: index.html
BaseScales/: index.html
BaseTableObject/: index.html
BaselineItem/: index.html
Boolean/: index.html
CapEnum/: index.html
CategoricalLegend/: index.html
CircleShape/: index.html
CircleShapeObject/: index.html
ColorBarLegend/: index.html
ColorItem/: index.html
ColorScale/: index.html
ConditionalColorUpdate/: index.html
ConditionalFillUpdate/: index.html
ContinuousColorDomain/: index.html
ContinuousColorMapRange/: index.html
Curie/: index.html
DataObject/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
ElementFormat/: index.html
FilterChannelTransform/: index.html
FilterTransform/: index.html
Float/: index.html
FontItem/: index.html
FontSizeItem/: index.html
FontStyleEnum/: index.html
FontStyleItem/: index.html
FontWeightEnum/: index.html
FontWeightItem/: index.html
Format/: index.html
GroupEncode/: index.html
GroupEncodeEnter/: index.html
GroupMark/: index.html
HorizontalAlignEnum/: index.html
HorizontalAlignObject/: index.html
ImageEncode/: index.html
ImageEncodeEnter/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LabelEncode/: index.html
LabelEncodeEnter/: index.html
Legend/: index.html
LegendDirections/: index.html
LegendType/: index.html
LinearColorScale/: index.html
LookupTransform/: index.html
Mark/: index.html
MarkDataSource/: index.html
MarkEncodeUpdate/: index.html
MarkTypeEnum/: index.html
NAColorUpdate/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
NormalizationFormulaTransform/: index.html
Objectidentifier/: index.html
OpacityObject/: index.html
OrientEnum/: index.html
Padding/: index.html
PathEncode/: index.html
PathEncodeEnter/: index.html
PointsEncodeEnter/: index.html
PointsMark/: index.html
PositionItem/: index.html
PositiveFloatObject/: index.html
RGBHexItem/: index.html
RandomRGBSignal/: index.html
RasterImageMark/: index.html
RasterLabelMark/: index.html
Scale/: index.html
ScaleEnum/: index.html
ShapesMark/: index.html
Sparqlpath/: index.html
SpatialDataElementObject/: index.html
SpatialDataFormat/: index.html
SpatialDataObject/: index.html
SpreadTransform/: index.html
String/: index.html
SymbolEncode/: index.html
TableObject/: index.html
TextEncode/: index.html
TextEncodeEnter/: index.html
TextItem/: index.html
TextMark/: index.html
Time/: index.html
Title/: index.html
Transform/: index.html
TransformTypeEnum/: index.html
Uri/: index.html
Uriorcurie/: index.html
ViewConfiguration/: index.html
about/: index.html
align/: index.html
angle/: index.html
as_/: index.html
axes/: index.html
baseline/: index.html
bottom/: index.html
color/: index.html
columnPadding/: index.html
columns/: index.html
count/: index.html
data/: index.html
default/: index.html
direction/: index.html
doc/: AggregateOpsEnum.md  AggregateTransform.md  Axis.md  AxisEnum.md  AxisItem.md  AxisRangeEnum.md  BaseAxisScale.md  BaseCategoricalColorScale.md  BaseLineEnum.md  BaseScales.md  BaselineItem.md  Boolean.md  CapEnum.md  CategoricalLegend.md  CircleShape.md  ColorBarLegend.md  ColorItem.md  ColorScale.md  ConditionalFillUpdate.md  ContinuousColorDomain.md  ContinuousColorMapRange.md  Curie.md  DataObject.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  FilterChannelTransform.md  FilterTransform.md  Float.md  FontItem.md  FontSizeItem.md  FontStyleEnum.md  FontStyleItem.md  FontWeightEnum.md  FontWeightItem.md  Format.md  GroupEncode.md  GroupEncodeEnter.md  (+154 more)
domain/: index.html
domainColor/: index.html
domainOpacity/: index.html
domainWidth/: index.html
encode/: index.html
enter/: index.html
examples/: README.md
expr/: index.html
field/: index.html
fields/: index.html
fill/: index.html
fillColor/: index.html
fillOpacity/: index.html
font/: index.html
fontSize/: index.html
fontStyle/: index.html
fontWeight/: index.html
format/: index.html
from_/: index.html
gradientLength/: index.html
gradientOpacity/: index.html
gradientStrokeColor/: index.html
gradientStrokeWidth/: index.html
grid/: index.html
gridCap/: index.html
gridColor/: index.html
gridOpacity/: index.html
gridWidth/: index.html
height/: index.html
key/: index.html
labelAlign/: index.html
labelColor/: index.html
labelFont/: index.html
labelFontSize/: index.html
labelFontStyle/: index.html
labelFontWeight/: index.html
labelOffset/: index.html
labelOpacity/: index.html
left/: index.html
legendX/: index.html
legendY/: index.html
legends/: index.html
marks/: index.html
name/: index.html
nonNegativeFloatSlot/: index.html
opacity/: index.html
opacityValueSlot/: index.html
ops/: index.html
orient/: index.html
padding/: index.html
px/: index.html
range/: index.html
rgbHexSlot/: index.html
rgbaHexSlot/: index.html
right/: index.html
rowPadding/: index.html
scale/: index.html
scales/: index.html
scheme/: index.html
search/: search_index.json
shape/: index.html
signal/: index.html
(+279 files in other folders)
