[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "vega_scverse"
description = "Vega like specification for the scverse plotting / visualization ecosystem."
authors = [
  {name = "Wouter-Michiel Vierdag", email = "michiel.vierdag@scverse.org"},
]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = ["version"]
dependencies = [
  "pydantic >=2.0",
]

# Optional dev dependencies in PEP 621 format
[project.optional-dependencies]
doc = [
  "mkdocs>=1.4.0",
  "mkdocs-material>=8.2.8",
  "mkdocs-mermaid2-plugin>=1.1.1",
  "mknotebooks>=0.8.0",
  "linkml>=1.3.5",
  "linkml-runtime >=1.1.24"
]

dev = [
  "linkml-runtime >=1.1.24",
  "linkml>=1.3.5",
  "schemasheets>=0.1.14",
  "jupyter>=1.0.0",
  "black",
]

test = [
  "pytest",
  "linkml-runtime >=1.1.24"
]

[tool.hatch.build]
include = [
  "README.md",
  "project/**"
]

[tool.hatch.build.targets.wheel]
packages = ["src/vega_scverse"]

[tool.hatch.version]
path = "src/vega_scverse/__about__.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
all = { features = ["dev", "test", "doc"], solve-group = "default" }

[tool.pixi.feature.dev.tasks]
gen_all_pydantic = "python ./src/repo_util_scripts/gen_all_pydantic.py"
gen-json-schema = "python ./src/repo_util_scripts/gen_all_jsonschema.py"
gen_project = "gen-project -d project src/vega_scverse/schema/specification.yaml"
lint = "python ./src/repo_util_scripts/linkml_all_lint.py"
cruft_check = "cruft check"
cruft_diff = "cruft diff"
update_template = "cruft update"
update_linkml = "pip install -U linkml"

[tool.pixi.feature.doc.tasks]
mkdocs = "mkdocs"
gen_doc = "gen-doc -d docs src/vega_scverse/schema/specification.yaml"
serve = "python ./src/repo_util_scripts/copy_docs.py && mkdocs serve"
deploy = "mkdocs gh-deploy --force"

[tool.pixi.feature.test.tasks]
test = "pytest"


[tool.pixi.pypi-dependencies]
vega-scverse = { path = ".", editable = true }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.8,<0.0.9"
